spacing issues fixed

--- a/css/microlib.css
+++ b/css/microlib.css
@@ -1455,11 +1455,11 @@ ul li::before {
 
 @media only screen and (min-width:820px) {
     #about {
-        margin-top: 110px;
+        margin-top: -50px;
         height:600px;
     }
     #first-wavy-line {
-      top: 120px;
+      top: -40px;
     }
 }
 
@@ -1503,13 +1503,17 @@ ul li::before {
 
 @media only screen and (max-width:768px) {
     #about {
-        margin-top:75px;
+        margin-top:-350px;
     }
 }
 
 @media only screen and (max-width:500px) {
     #about {
-        margin-top:400px;
+        margin-top: -300px;
     }
 
+}
+
+#see_more, #see_more2 {
+    display:none;
 }
